@@ -1,6 +1,7 @@
 package com.anabada.neighbor.used.service;
 
 import com.anabada.neighbor.member.domain.Member;
+import com.anabada.neighbor.used.domain.Category;
 import com.anabada.neighbor.used.domain.Post;
 import com.anabada.neighbor.used.domain.Product;
 import com.anabada.neighbor.used.domain.Used;
@@ -10,14 +11,15 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
+import javax.servlet.http.Cookie;
+import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
 
 @Service
 @RequiredArgsConstructor
@@ -27,17 +29,19 @@ public class UsedServiceImpl implements UsedService{
     private final ImgDownService imgDownService;
 
     @Override
-    public List<Used> list() {//글리스트
-        List<Used> usedList = new ArrayList<>();
-        List<Post> postList = usedRepository.postList();
-
-        for (int i = 0; i < postList.size(); i++) {
-            Post post = postList.get(i);
-            Member member = usedRepository.findMember(post.getMemberId());
-            Product product = usedRepository.findProduct(post.getPostId());
-            String categoryName = usedRepository.findCategoryName(product.getCategoryId());
-
-            Used used = Used.builder()
+    public List<Used> list(long categoryId, String listType) {//글 리스트
+        List<Used> usedList = new ArrayList<>(); //리턴할 값
+        List<Product> productList = null;
+        if (categoryId != 0) { //파라미터로 받은 categoryId가 0이 아니면
+            productList = usedRepository.productCategoryList(categoryId); //product 테이블에서 categoryId가 파라미터로 받은 categoryId랑 같은 튜플 가져오기
+        }else { //파라미터로 받은 categoryId가 0이면
+            productList = usedRepository.productList(); //product 리스트 가져오기
+        }
+        for (Product product : productList) {
+            Post post = usedRepository.findPost(product.getPostId()); //product 테이블의 postId로 post 테이블에서 해당하는 튜플 가져오기
+            Member member = usedRepository.findMember(post.getMemberId()); //post 테이블의 memberId로 member 테이블에서 해당하는 튜플 가져오기
+            String categoryName = usedRepository.findCategoryName(product.getCategoryId()); //product 테이블의 categoryId로 Category 테이블에서 해당하는 categoryName 가져오기
+            Used used = Used.builder() //used 객체 생성
                     .postId(post.getPostId())
                     .title(post.getTitle())
                     .content(post.getContent())
@@ -57,14 +61,26 @@ public class UsedServiceImpl implements UsedService{
                     .score(member.getScore())
                     .memberStatus(member.getMemberStatus())
                     .build();
+            usedList.add(used);//리턴할 usedList에 used객체 추가
+        }
+        //리스트를 postupdate로 내림차순 정렬
+        Comparator<Used> comparator = (use1, use2) -> Long.valueOf(
+                use1.getPostUpdate().getTime())
+                .compareTo(use2.getPostUpdate().getTime());
+        Collections.sort(usedList, comparator.reversed());
 
-
-
-            usedList.add(used);
+        if (listType.equals("similarList")) { //listType이 similarList라면
+            return usedList.subList(0, Math.min(usedList.size(), 4)); //usedList에서 앞에 4개만 리턴
         }
 
         return usedList;
 
+    }
+    @Override
+    public List<Category> categoryList() {//카테고리 리스트
+        List<Category> categoryList = usedRepository.categoryList();//리턴할 리스트
+
+        return categoryList;
     }
 
     @Transactional
@@ -94,44 +110,70 @@ public class UsedServiceImpl implements UsedService{
     }
 
     @Override
-    public void update(Used used) {//게시글수정
+    public void update(Used used) throws Exception{//게시글수정
+        String formImg = used.getFiles().get(0).getOriginalFilename();
         usedRepository.updatePost(used);
         usedRepository.updateProduct(used);
-
-        try {
-            String uploadDir = "C:\\upload_anabada";
-
-            if (!Files.exists(Paths.get(uploadDir))) {
+        String uploadDir = "C:\\upload_anabada";
+        Path originImg = Path.of(uploadDir+"\\"+usedRepository.findImgUrl(used.getPostId()));//원래 이미지 url찾아오기
+            if (!Files.exists(Paths.get(uploadDir))) {//디렉토리가 없다면 디렉토리생성
                 Files.createDirectories(Paths.get(uploadDir));
             }
-
-            for (MultipartFile file : used.getFiles()) {
-                String uuid = UUID.randomUUID().toString();
-                String fileName = uuid + "_" + file.getOriginalFilename();
-                String filePath = uploadDir + File.separator + fileName;
-                file.transferTo(new File(filePath));
-                usedRepository.updateImage(used.getPostId(),fileName);
+            if(!formImg.equals("") && formImg != null ) {
+                for (MultipartFile file : used.getFiles()) {
+                    System.out.println("이프문안에:"+formImg);
+                    Files.delete(originImg);//원래 이미지 삭제
+                    String uuid = UUID.randomUUID().toString();
+                    String fileName = uuid + "_" + file.getOriginalFilename();
+                    String filePath = uploadDir + File.separator + fileName;
+                    file.transferTo(new File(filePath));
+                    usedRepository.updateImage(used.getPostId(), fileName);
+                  }
             }
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-        System.out.println("서비스임플:"+used);
+
+
     }
 
     @Override
     public void delete(long postId) {
-//        usedRepository.deletePost(postId);
-//        usedRepository.deleteProdcut(postId);
-//        usedRepository.delete
+
+        try {
+            Path uploadDir = Path.of("C:\\upload_anabada\\"+usedRepository.findImgUrl(postId));
+            Files.delete(uploadDir);
+            usedRepository.deleteReply(postId);
+            usedRepository.deleteImg(postId);
+            usedRepository.deleteProduct(postId);
+            usedRepository.deletePost(postId);
+        }catch (Exception e){
+            e.printStackTrace();
+        }
     }
 
     @Override
-    public Used detail(long postId) {
-        Post post = usedRepository.findPost(postId);
-        Product product = usedRepository.findProduct(postId);
-        String categoryName = usedRepository.findCategoryName(product.getCategoryId());
-        Member member = usedRepository.findMember(post.getMemberId());
-        return Used.builder()
+    public Used detail(long postId, HttpServletRequest request, HttpServletResponse response) { //게시물 상세보기
+        Post post = usedRepository.findPost(postId); //파라미터로 받은 postId에 해당하는 튜플을 post 테이블에서 가져오기
+        Product product = usedRepository.findProduct(postId); //파라미터로 받은 postId에 해당하는 튜플을 product 테이블에서 가져오기
+        Member member = usedRepository.findMember(post.getMemberId()); //가져온 post의 memberId로 member 테이블에서 해당하는 튜플 가져오기
+        String categoryName = usedRepository.findCategoryName(product.getCategoryId()); //가져온 product의 categoryId로 category 테이블에서 해당하는 categoryName 가져오기
+
+        Cookie[] cookies = request.getCookies(); //쿠키 가져오기
+
+        Cookie viewCookie = null; //
+
+        if (cookies != null && cookies.length > 0) { //가져온 쿠키가 있으면
+            for (Cookie cookie : cookies) {
+                if (cookie.getName().equals("cookie" + postId)) { //해당하는 게시물의 쿠키가 있으면
+                   viewCookie = cookie; //viewCookie에 저장
+                }
+            }
+        }
+        if (viewCookie == null) { //쿠키가 없으면
+            Cookie newCookie = new Cookie("cookie" + postId, String.valueOf(postId)); //해당하는 게시물의 새로운 쿠키 생성
+            response.addCookie(newCookie); //쿠키 등록
+            usedRepository.updatePostView(postId); //postId로 post 테이블에서 해당하는 튜플의 조회수 증가
+        }
+
+        return Used.builder() //게시물의 상세정보 리턴
                 .postId(post.getPostId())
                 .title(post.getTitle())
                 .content(post.getContent())
@@ -161,10 +203,9 @@ public class UsedServiceImpl implements UsedService{
 
     @Override
     public void downloadFiles(String filename, HttpServletResponse response) throws IOException {
-            imgDownService.imgDown(filename,response);
-        }
-
+        imgDownService.imgDown(filename,response);
     }
+}
 
 
 
